--- a/misc/pinout-gen/pinout.html
+++ b/misc/pinout-gen/pinout.html
@@ -16,12 +16,6 @@
   <div class="pin-marker"></div>
 </template>
 
-<div id="connector-container">
-  <div id="connector-div">
-    <img id="connector-img"></img>
-  </div>
-</div>
-
 <template id="table-template">
   <tr class="data">
     <td class="pin-data"></td>
@@ -32,39 +26,48 @@
   </tr>
 </template>
 
-<table id="info-table">
-  <thead>
-    <tr>
-      <th>Pin Number</th>
-      <th>Firmware ID</th>
-      <th>Type</th>
-      <th>Typical Function</th>
-      <th>Pigtail Color</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
+<template id="connector-template">
+<div class="container">
+  <div class="connector-container">
+    <div class="connector-div">
+      <img class="connector-img"></img>
+    </div>
+  </div>
+  <table class="info-table">
+    <thead>
+      <tr>
+        <th>Pin Number</th>
+        <th>Firmware ID</th>
+        <th>Type</th>
+        <th>Typical Function</th>
+        <th>Pigtail Color</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 
-<br/>
-<br/>
-<br/>
-<br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
 
-<h2>Full Pinout Table</h2>
-<table id="pinout-table">
-  <thead>
-    <tr>
-      <th>Pin Number</th>
-      <th>Firmware ID</th>
-      <th>Type</th>
-      <th>Typical Function</th>
-      <th>Pigtail Color</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
+  <h2>Full Pinout Table</h2>
+  <table class="pinout-table">
+    <thead>
+      <tr>
+        <th>Pin Number</th>
+        <th>Firmware ID</th>
+        <th>Type</th>
+        <th>Typical Function</th>
+        <th>Pigtail Color</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+</div>
+</template>
 
 </body>
 </html>
