--- a/misc/pinout-gen/pinout.html
+++ b/misc/pinout-gen/pinout.html
@@ -37,11 +37,11 @@
     <table class="info-table">
       <thead>
         <tr>
-          <th>Pin Number</th>
-          <th>Firmware ID</th>
-          <th>Type</th>
-          <th>Typical Function</th>
-          <th>Pigtail Color</th>
+          <th class="pin-header">Pin Number</th>
+          <th class="id-header">Firmware ID</th>
+          <th class="type-header">Type</th>
+          <th class="function-header">Typical Function</th>
+          <th class="color-header">Pigtail Color</th>
         </tr>
       </thead>
       <tbody>
@@ -54,19 +54,21 @@
     <br/>
 
     <h2>Full Pinout Table</h2>
-    <table class="pinout-table">
-      <thead>
-        <tr>
-          <th>Pin Number</th>
-          <th>Firmware ID</th>
-          <th>Type</th>
-          <th>Typical Function</th>
-          <th>Pigtail Color</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+    <div class="table-wrapper">
+      <table class="pinout-table">
+        <thead>
+          <tr>
+            <th class="pin-header">Pin Number</th>
+            <th class="id-header">Firmware ID</th>
+            <th class="type-header">Type</th>
+            <th class="function-header">Typical Function</th>
+            <th class="color-header">Pigtail Color</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
     <br/>
     <br/>
     <br/>
