Interactive Pinout printing (#2411)
* initial print css

* more print layout changes, and better zoom support

* oopsies

* more improvements maybe

* please don't grow

* color cells

* fettling

* fettling

* fettling

* fettling

* keep image from getting too big

* try auto

* hmm

* rounded

* try auto sizing

* bugfix

* It verks?

* make em bigger

* bugfix

* auto sizing

--- a/misc/pinout-gen/pinout.html
+++ b/misc/pinout-gen/pinout.html
@@ -37,40 +37,32 @@
     <table class="info-table">
       <thead>
         <tr>
-          <th>Pin Number</th>
-          <th>Firmware ID</th>
-          <th>Type</th>
-          <th>Typical Function</th>
-          <th>Pigtail Color</th>
+          <th class="pin-header">Pin Number</th>
+          <th class="id-header">Firmware ID</th>
+          <th class="type-header">Type</th>
+          <th class="function-header">Typical Function</th>
+          <th class="color-header">Pigtail Color</th>
         </tr>
       </thead>
       <tbody>
       </tbody>
     </table>
-
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-
     <h2>Full Pinout Table</h2>
-    <table class="pinout-table">
-      <thead>
-        <tr>
-          <th>Pin Number</th>
-          <th>Firmware ID</th>
-          <th>Type</th>
-          <th>Typical Function</th>
-          <th>Pigtail Color</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <div class="table-wrapper">
+      <table class="pinout-table">
+        <thead>
+          <tr>
+            <th class="pin-header">Pin Number</th>
+            <th class="id-header">Firmware ID</th>
+            <th class="type-header">Type</th>
+            <th class="function-header">Typical Function</th>
+            <th class="color-header">Pigtail Color</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
   </div>
 </template>
 
