added wiki to links

--- a/misc/www/index.html
+++ b/misc/www/index.html
@@ -477,6 +477,16 @@
           <a class="button" href="https://rusefi.com/forum/" target="_blank">rusEFI forum</a>
         </div>
       </div>
+      <div class="row example">
+        <a class="example-screenshot-wrapper" target="_blank">
+          <img class="example-screenshot" src="images/site/rewiki.png">
+        </a>
+        <div class="one-half offset-by-one-half column">
+          <h6 class="example-header">rusEFI wiki</h6>
+          <p class="example-description">More in-depth information related to rusEFI and it's current features.</p>
+          <a class="button" href="https://github.com/rusefi/rusefi/wiki" target="_blank">rusEFI WIKI</a>
+        </div>
+      </div>
       <br>
     </div>
 
