replace firmware ID column with TS name

--- a/misc/pinout-gen/pinout.html
+++ b/misc/pinout-gen/pinout.html
@@ -20,7 +20,7 @@
 <template id="table-template">
   <tr class="data">
     <td class="pin-data"></td>
-    <td class="id-data"></td>
+    <td class="ts-data"></td>
     <td class="type-data"></td>
     <td class="function-data"></td>
     <td class="color-data"></td>
@@ -38,7 +38,7 @@
       <thead>
         <tr>
           <th class="pin-header">Pin Number</th>
-          <th class="id-header">Firmware ID</th>
+          <th class="ts-header">TS Name</th>
           <th class="type-header">Type</th>
           <th class="function-header">Typical Function</th>
           <th class="color-header">Pigtail Color</th>
@@ -53,7 +53,7 @@
         <thead>
           <tr>
             <th class="pin-header">Pin Number</th>
-            <th class="id-header">Firmware ID</th>
+            <th class="ts-header">TS Name</th>
             <th class="type-header">Type</th>
             <th class="function-header">Typical Function</th>
             <th class="color-header">Pigtail Color</th>
