--- a/misc/pinout-gen/pinout.html
+++ b/misc/pinout-gen/pinout.html
@@ -6,7 +6,6 @@
 ###CSS###
 </style>
 
-<script type="text/javascript" src="yaml.min.js"></script>
 <script type="text/javascript">
 ###JS###
 </script>
@@ -19,11 +18,11 @@
 
 <template id="table-template">
   <tr class="data">
-    <td class="pin-data"></td>
-    <td class="ts-data"></td>
-    <td class="type-data"></td>
-    <td class="function-data"></td>
-    <td class="color-data"></td>
+    <td class="pin-data" data-field="pin"></td>
+    <td class="ts-data" data-field="ts_name"></td>
+    <td class="type-data" data-field="type"</td>
+    <td class="function-data" data-field="function"></td>
+    <td class="color-data" data-field="color"></td>
   </tr>
 </template>
 
@@ -37,11 +36,11 @@
     <table class="info-table">
       <thead>
         <tr>
-          <th class="pin-header">Pin Number</th>
-          <th class="ts-header">TS Name</th>
-          <th class="type-header">Type</th>
-          <th class="function-header">Typical Function</th>
-          <th class="color-header">Pigtail Color</th>
+          <th class="pin-header" data-field="pin">Pin Number</th>
+          <th class="ts-header" data-field="ts_name">TS Name</th>
+          <th class="type-header" data-field="type">Type</th>
+          <th class="function-header" data-field="function">Typical Function</th>
+          <th class="color-header" data-field="color">Pigtail Color</th>
         </tr>
       </thead>
       <tbody>
@@ -52,11 +51,11 @@
       <table class="pinout-table">
         <thead>
           <tr>
-            <th class="pin-header">Pin Number</th>
-            <th class="ts-header">TS Name</th>
-            <th class="type-header">Type</th>
-            <th class="function-header">Typical Function</th>
-            <th class="color-header">Pigtail Color</th>
+            <th class="pin-header" data-field="pin">Pin Number</th>
+            <th class="ts-header" data-field="ts_name">TS Name</th>
+            <th class="type-header" data-field="type">Type</th>
+            <th class="function-header" data-field="function">Typical Function</th>
+            <th class="color-header" data-field="color">Pigtail Color</th>
           </tr>
         </thead>
         <tbody>
