--- a/misc/www/index.html
+++ b/misc/www/index.html
@@ -64,6 +64,7 @@
         <li class="menuentry">Hardware</li>
         <li class="navbar-item"><a href="index.html#microrusefi">microRusEFI</a></li>
         <li class="popover-item"><a href="index.html#proteus">Proteus</a></li>
+        <li class="popover-item"><a href="https://github.com/rusefi/rusefi/wiki/Hellen-One-Platform">Hellen One</a></li>
       </ul>
       <ul class="navbar-list">
         <li class="menuentry">Documentation</li>
@@ -74,7 +75,7 @@
         <li class="popover-item"><a href="index.html#shop">Shop</a></li>
       </ul>
       <ul class="navbar-list">
-        <li class="menuentry">Links</li>
+        <li class="menuentry">More</li>
         <li class="popover-item"><a href="http://www.rusefi.com/online">rusEFI online</a>
         <li class="popover-item"><a href="http://www.rusefi.com/forum">Forum</a>
         <li class="popover-item"><a href="https://github.com/rusefi/rusefi/wiki">Wiki</a>
