--- a/misc/www/index.html
+++ b/misc/www/index.html
@@ -118,6 +118,9 @@
               <li class="popover-item">
                 <a class="popover-link" href="index.html#proteus">Proteus</a>
               </li>
+              <li class="popover-item">
+                <a class="popover-link" href="https://github.com/rusefi/rusefi/wiki/Hellen-One-Platform">Hellen</a>
+              </li>
             </ul>
           </div>
         </li>
@@ -136,7 +139,7 @@
         </li>
         <li class="navbar-item"><a class="navbar-link" href="index.html#shop">Shop</a></li>
         <li class="navbar-item">
-          <a class="navbar-link" href="#" data-popover="#linksNavPopover">Links</a>
+          <a class="navbar-link" href="#" data-popover="#linksNavPopover">More</a>
           <div id="linksNavPopover" class="popover">
             <ul class="popover-list">
               <li class="popover-item">
